--- a/changelog
+++ b/changelog
@@ -1,5 +1,8 @@
 CHANGELOG
 
+0.0.6
+* added TimeUUID column
+
 0.0.5
 * added connection pooling
 * adding a few convenience query classmethods to the model class
