--- a/changelog
+++ b/changelog
@@ -1,5 +1,9 @@
 CHANGELOG
 
+0.0.7
+* fixed manual table name bug
+* changed model level db_name field to table_name
+
 0.0.6
 * added TimeUUID column
 
