--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 CHANGELOG
 
 0.1.2 (in progress)
+* expanding internal save function to use update where appropriate
 * adding set, list, and map collection types
 * adding support for allow filtering flag
 * updating management functions to work with cassandra 1.2
