--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 CHANGELOG
 
-0.4.0
+0.4.0 (in progress)
 * removed default values from all column types
 * explicit primary key is required (automatic id removed)
 * added validation on keyname types on .create()
