--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ CHANGELOG
 * removed default values from all column types
 * explicit primary key is required (automatic id removed)
 * added validation on keyname types on .create()
+* changed internal implementation of model value get/set
 
 0.3.3
 * added abstract base class models
