--- a/changelog
+++ b/changelog
@@ -7,6 +7,8 @@ CHANGELOG
 * changed table_name to __table_name__, read_repair_chance to __read_repair_chance__, keyspace to __keyspace__
 * modified table name auto generator to ignore module name
 * changed internal implementation of model value get/set
+* added TimeUUID.from_datetime(), used for generating UUID1's for a specific
+time
 
 0.3.3
 * added abstract base class models
