--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,10 @@
 PRIMARY AUTHORS
 
 Blake Eggleston <bdeggleston@gmail.com>
+Jon Haddad <jon@jonhaddad.com>
 
 CONTRIBUTORS
 
 Eric Scrivner - test environment, connection pooling
-Jon Haddad - helped hash out some of the architecture
+
 
