--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ CHANGELOG
 
 0.9
 * adding update method
+* adding BigInt column (thanks @Lifto)
 * only saving collection fields on insert if they've been modified
 
 0.8.5
