--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ CHANGELOG
   - allows for long, timedelta, and datetime
 * fixed use of USING TIMESTAMP in batches
 * clear TTL and timestamp off models after persisting to DB
+* allows UUID without - (Thanks to Michael Haddad, github.com/mahall)
 
 0.10.0
 
