--- a/changelog
+++ b/changelog
@@ -5,6 +5,7 @@ CHANGELOG
 * Normalize and unquote boolean values. (Thanks Kevin Deldycke github.com/kdeldycke)
 * Fix race condition in connection manager (Thanks Roey Berman github.com/bergundy)
 * allow access to instance columns as if it is a dict (Thanks Kevin Deldycke github.com/kdeldycke)
+* Added support for blind partial updates to queryset (Thanks Danny Cosson github.com/dcosson)
 
 0.11.0
 
