--- a/AUTHORS
+++ b/AUTHORS
@@ -3,8 +3,14 @@ PRIMARY AUTHORS
 Blake Eggleston <bdeggleston@gmail.com>
 Jon Haddad <jon@jonhaddad.com>
 
-CONTRIBUTORS
+CONTRIBUTORS (let us know if we missed you)
 
 Eric Scrivner - test environment, connection pooling
 Kevin Deldycke
-
+Roey Berman
+Danny Cosson
+Michael Hall
+Netanel Cohen-Tzemach
+Mariusz Kryński
+Greg Doermann
+@pandu-rao
