--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.0.2~prerelease-1) unstable; urgency=low
+
+  * Update dependencies for 2.0.x
+
+ -- Tyler Hobbs <tyler@datastax.com>  Tue, 03 Jun 2014 15:16:53 -0500
+
 python-cassandra-driver (1.1.0~prerelease-1) unstable; urgency=low
 
   * Initial packaging
