--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.0.2-1) unstable; urgency=low
+
+  * Release 2.0.2
+
+ -- Tyler Hobbs <tyler@datastax.com>  Tue, 10 Jun 2014 16:22:23 -0500
+
 python-cassandra-driver (2.0.2~prerelease-1) unstable; urgency=low
 
   * Update dependencies for 2.0.x
