Updated Debian-specific patch (failed to apply)
* Kept original patch author's in-line comment for reference
* Updated debian/changelog accordingly, just to make sure
* Added patch validation step to release protocol in README-dev

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.0.2-2) unstable; urgency=low
+
+  * Fixed debian/patches
+
+ -- Carsten Aulbert <carsten.aulbert@aei.mpg.de>  Thu, 19 Jun 2014 14:07:27 +0200
+
 python-cassandra-driver (2.0.2-1) unstable; urgency=low
 
   * Release 2.0.2
