--- a/changelog
+++ b/changelog
@@ -1,5 +1,14 @@
 CHANGELOG
 
+0.16.0
+
+* Check number of elements in collections.
+* Add support for table properties.
+
+
+0.15.0 
+* native driver integration
+
 0.14.0
 
 * fix for setting map to empty (Lifto)
@@ -7,11 +16,6 @@ CHANGELOG
 * use stable version of sure package (maedhroz)
 * performance improvements 
 
-<<<<<<< HEAD
-=======
-* Check number of elements in collections.
-* Add support for table properties.
->>>>>>> 3c56fec1d8d79d6037d3b83703608d4889994012
 
 0.13.0
 * adding support for post batch callbacks (thanks Daniel Dotsenko github.com/dvdotsenko)
