--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.1.0) unstable; urgency=low
+
+  * Release 2.1.0
+
+ -- Adam Holmberg <adam.holmberg@datastax.com>  Thu, 07 Aug 2014 19:01:17 +0000
+
 python-cassandra-driver (2.0.2-2) unstable; urgency=low
 
   * Fixed debian/patches
