--- a/changelog
+++ b/changelog
@@ -1,5 +1,11 @@
 CHANGELOG
 
+
+0.17.0
+
+* retry_connect on setup()
+* optional default TTL on model
+
 0.16.0
 
   225: No handling of PagedResult from execute
