--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.1.1) unstable; urgency=low
+
+  * Release 2.1.1
+
+ -- Adam Holmberg <adam.holmberg@datastax.com>  Tue, 09 Sep 2014 17:14:41 +0000
+
 python-cassandra-driver (2.1.0) unstable; urgency=low
 
   * Release 2.1.0
