--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (2.1.2) unstable; urgency=low
+
+  * Release 2.1.2
+
+ -- Adam Holmberg <adam.holmberg@datastax.com>  Thu, 16 Oct 2014 18:30:22 +0000
+
 python-cassandra-driver (2.1.1) unstable; urgency=low
 
   * Release 2.1.1
