--- a/changelog
+++ b/changelog
@@ -1,5 +1,11 @@
 CHANGELOG
 
+
+0.21.1
+
+removed references to create_missing_keyspace
+
+
 0.21.0
 
 Create keyspace no longer defaults to SimpleStrategy with 3 replicas.  It must be manually specified.
